--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -1,77 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Unique Style</title>
-        <link rel="stylesheet" href="css/header.css">
-        <link rel="stylesheet" href="css/login.css">
-        <link rel="stylesheet" href="css/footer.css">
-        <link rel="icon" href="img/logoUS.png">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Unique Style</title>
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="icon" href="img/logoUS.png">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 
-    </head>
 
-    <body>
-        <div class="header" style="z-index: 100;">
-            <div class="container">
-                <a href="index.html"><img src="img/Logo e nome.png" alt="Logo"></a>
-                <ul class="navBar">
-                    <li><a href="index.html#sobreMim">Sobre Mim</a></li>
-                    <li><a href="index.html#beneficios">Benefícios</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
-                </ul>
-                <div class="botoes">
-                    <button id="botaoLogin" onclick="login()">Login</button>
-                    <button id="botaoCadastro" style="background-color: rgb(106, 106, 106, 27%);">Cadastre-se</button>
-                </div>
+</head>
+
+<body>
+    <div class="header" style="z-index: 100;">
+        <div class="container">
+            <a href="index.html"><img src="img/Logo e nome.png" alt="Logo"></a>
+            <ul class="navBar">
+                <li><a href="index.html#sobreMim">Sobre Mim</a></li>
+                <li><a href="index.html#beneficios">Benefícios</a></li>
+                <li><a href="faq.html">FAQ</a></li>
+            </ul>
+            <div class="botoes">
+                <button id="botaoLogin" onclick="login()">Login</button>
+                <button id="botaoCadastro" style="background-color: rgb(106, 106, 106, 27%);">Cadastre-se</button>
             </div>
         </div>
-        <div class="conteudo">
-            <div class="caixa">
-                <div class="titulo">
-                    <h3 style="margin-left: 48.6%;">CADASTRO</h3>
-                </div>
-                <div class="camposCadastro">
-                    <input id="iptNome" placeholder="nome">
-                    <input id="iptEmail" placeholder="e-mail">
-                    <input type="password" id="iptSenha" placeholder="senha">
-                    <input type="password" id="iptConfirmacaoSenha" placeholder="confirmação de senha">
-                </div>
-                <a href="login.html" style="margin-top: 35.1%;">Já possuo uma conta</a>
-                <button onclick="cadastrar()" style="margin-top: 35%; z-index: 1;">Cadastrar</button>
-                <div class="imagem">
-                    <img src="img/caixaLoginCadastro.png" alt="Login">
-                </div>
+    </div>
+    <div class="conteudo">
+        <div class="caixa">
+            <div class="titulo">
+                <h3 style="margin-left: 48.6%;">CADASTRO</h3>
             </div>
-
-        </div>
-        <div class="footer">
-            <div class="footerConteudo">
-                <ul class="marca">
-                    <li><img src="img/logoUS.png" alt="Logo"></li>
-                    <li><p>© Copyright, todos os direitos reservados</p></li>
-                </ul>
-                <ul class="contato">
-                    <li><i>E-mail</i></li>
-                    <li><p id="email" onclick="copiarEmail()">sofhiautaka@gmail.com</p></li>
-                </ul>
-                <ul class="cards">
-                    <a href="https://wa.me/11982781626"><li><img src="img/whats.png" alt="WhatsApp"></li></a>
-                    <a href="https://instagram.com/sofh.studies?igshid=NTc4MTIwNjQ2YQ=="><li><img src="img/insta.png" alt="Instagram"></li></a>
-                    <a href="https://www.linkedin.com/in/sofhia-utaka-a4598027a"><li><img src="img/linkedin.png" alt="Linkedin"></li></a>
-                </ul>
-                <ul class="links">
-                    <a href="#sobreMim"><li>Sobre Mim</li></a>
-                    <a href="#beneficios"><li>Benefícios</li></a>
-                    <a href="faq.html"><li>FAQ</li></a>
-                </ul>
+            <div class="camposCadastro">
+                <input id="iptNome" placeholder="nome">
+                <input id="iptEmail" placeholder="e-mail">
+                <input type="password" id="iptSenha" placeholder="senha">
+                <input type="password" id="iptConfirmacaoSenha" placeholder="confirmação de senha">
+            </div>
+            <a href="login.html" style="margin-top: 35.1%;">Já possuo uma conta</a>
+            <button onclick="cadastrar()" style="margin-top: 35%; z-index: 1;">Cadastrar</button>
+            <div class="imagem">
+                <img src="img/caixaLoginCadastro.png" alt="Login">
             </div>
         </div>
 
-    </body>
+    </div>
+    <div class="footer">
+        <div class="footerConteudo">
+            <ul class="marca">
+                <li><img src="img/logoUS.png" alt="Logo"></li>
+                <li>
+                    <p>© Copyright, todos os direitos reservados</p>
+                </li>
+            </ul>
+            <ul class="contato">
+                <li><i>E-mail</i></li>
+                <li>
+                    <p id="email" onclick="copiarEmail()">sofhiautaka@gmail.com</p>
+                </li>
+            </ul>
+            <ul class="cards">
+                <a href="https://wa.me/11982781626">
+                    <li><img src="img/whats.png" alt="WhatsApp"></li>
+                </a>
+                <a href="https://instagram.com/sofh.studies?igshid=NTc4MTIwNjQ2YQ==">
+                    <li><img src="img/insta.png" alt="Instagram"></li>
+                </a>
+                <a href="https://www.linkedin.com/in/sofhia-utaka-a4598027a">
+                    <li><img src="img/linkedin.png" alt="Linkedin"></li>
+                </a>
+            </ul>
+            <ul class="links">
+                <a href="#sobreMim">
+                    <li>Sobre Mim</li>
+                </a>
+                <a href="#beneficios">
+                    <li>Benefícios</li>
+                </a>
+                <a href="faq.html">
+                    <li>FAQ</li>
+                </a>
+            </ul>
+        </div>
+    </div>
+
+</body>
 
 </html>
 
@@ -134,7 +152,13 @@
                 console.log("resposta: ", resposta);
 
                 if (resposta.ok) {
-                    window.location.href = "login.html";
+                    // alert('Cadastro realizado com sucesso!')
+
+                    swal("Cadastro realizado com sucesso!", "", "success");
+                    
+                    setTimeout(() => {
+                        window.location.href = "login.html";
+                    }, 8000)
 
                 } else {
                     throw ("Houve um erro ao tentar realizar o cadastro!");
@@ -146,12 +170,12 @@
             return false;
         }
     }
-    
-    function copiarEmail(){
-        navigator.clipboard.writeText( "sofhiautaka@gmail.com")
-        .then(() => {
-        alert("O email foi copiado para sua área de transferência!");
-      })
+
+    function copiarEmail() {
+        navigator.clipboard.writeText("sofhiautaka@gmail.com")
+            .then(() => {
+                alert("O email foi copiado para sua área de transferência!");
+            })
     }
 
 </script>
