--- a/site/public/index.html
+++ b/site/public/index.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/footer.css">
         <link rel="icon" href="img/logoUS.png">
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
     </head>
 
     <body>
@@ -254,7 +256,8 @@
     function copiarEmail(){
         navigator.clipboard.writeText( "sofhiautaka@gmail.com")
         .then(() => {
-        alert("O email foi copiado para sua área de transferência!");
+        swal("O email foi copiado para sua área de transferência!");
+
       })
     }
 </script>
