--- a/site/public/login.html
+++ b/site/public/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="icon" href="img/logoUS.png">
-
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 </head>
 <body>
@@ -30,7 +30,7 @@
     </div>
     <div class="conteudo">
         <div class="caixa">
-            <div class="titulo">
+            <div class="titulo" style="margin-left: 0.2%;">
                 <h3>LOGIN</h3>
             </div>
             <div class="campos">
@@ -87,13 +87,19 @@
     
 
         if (email == '' && senha == '') {
-            alert('Campos em branco!');
+            swal("Erro!", "Campos em branco!");
+
+            // alert('Campos em branco!');
             erro++;
         } else if (email == '') {
-            alert('Preencha o seu email!');
+            swal("Erro!", "Preencha o seu email!");
+
+            // alert('Preencha o seu email!');
             erro++;
         } else if (senha == '') {
-            alert('Preencha a sua senha!');
+            swal("Erro!", "Preencha a sua senha!");
+
+            // alert('Preencha a sua senha!');
             erro++;
         }
 
@@ -133,7 +139,9 @@
                 });
 
             } else {
-                alert('Você não possui uma conta ou colocou seu email/ senha incorretos')
+            swal("Você não possui uma conta ou colocou seu email/ senha incorretos");
+
+                // alert('Você não possui uma conta ou colocou seu email/ senha incorretos')
                 console.log("Houve um erro ao tentar realizar o login!");
 
                 resposta.text().then(texto => {
@@ -153,7 +161,8 @@
     function copiarEmail(){
         navigator.clipboard.writeText( "sofhiautaka@gmail.com")
         .then(() => {
-        alert("O email foi copiado para sua área de transferência!");
+        swal("O email foi copiado para sua área de transferência!");
+
       })
     }
 
